.ci/policies/base/disallow-capabilities-strict.yaml
---
# upstream content is vendored verbatim, so long lines are tolerated:
# yamllint disable rule:line-length
# Vendored from github.com/kyverno/policies
# path: pod-security/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
# ref: 76be98a25d49ae01278a94ecde8f50f9e08577ef
# Do not edit by hand; re-run .ci/policies/vendor-upstream-policies.sh instead.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities-strict
  annotations:
    policies.kyverno.io/title: Disallow Capabilities (Strict)
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: '1.22-1.23'
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Adding capabilities other than `NET_BIND_SERVICE` is disallowed. In addition,
      all containers must explicitly drop `ALL` capabilities.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-drop-all
      match:
        any:
          - resources:
              kinds:
                - Pod
      preconditions:
        all:
          - key: "{{ request.operation || 'BACKGROUND' }}"
            operator: NotEquals
            value: DELETE
      validate:
        message: >-
          Containers must drop `ALL` capabilities.
        foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            deny:
              conditions:
                all:
                  - key: ALL
                    operator: AnyNotIn
                    value: '{{ element.securityContext.capabilities.drop[] || `[]` }}'
    - name: adding-capabilities-strict
      match:
        any:
          - resources:
              kinds:
                - Pod
      preconditions:
        all:
          - key: "{{ request.operation || 'BACKGROUND' }}"
            operator: NotEquals
            value: DELETE
      validate:
        message: >-
          Any capabilities added other than NET_BIND_SERVICE are disallowed.
        foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            deny:
              conditions:
                all:
                  - key: '{{ element.securityContext.capabilities.add[] || `[]` }}'
                    operator: AnyNotIn
                    value:
                      - NET_BIND_SERVICE
                      - ''
