.ci/policies/base/disallow-host-ports.yaml
---
# upstream content is vendored verbatim, so long lines are tolerated:
# yamllint disable rule:line-length
# Vendored from github.com/kyverno/policies
# path: pod-security/baseline/disallow-host-ports/disallow-host-ports.yaml
# ref: 76be98a25d49ae01278a94ecde8f50f9e08577ef
# Do not edit by hand; re-run .ci/policies/vendor-upstream-policies.sh instead.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
  annotations:
    policies.kyverno.io/title: Disallow hostPorts
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: '1.22-1.23'
    policies.kyverno.io/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      field is unset or set to `0`.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: host-ports-none
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
          , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
          must either be unset or set to `0`.
        pattern:
          spec:
            =(ephemeralContainers):
              - =(ports):
                  - =(hostPort): 0
            =(initContainers):
              - =(ports):
                  - =(hostPort): 0
            containers:
              - =(ports):
                  - =(hostPort): 0
